--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,9 @@
+.categories {
+  background-image: url('../img/BG.png');
+  background-size: cover;
+  color: #000000;
+}
+
 .container {
   max-width: 800px; }
 .header {
